# constrained-inputs

./: Cargo.toml  README.md
src/: basic_constraints.rs  constraints.rs  error.rs  lib.rs  main.rs  prelude.rs  test.rs
tests/: test.rs
