[package]
name = "cinputs"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Crate that simplifies the constraining of inputs"
categories = ["parsing"]
documentation = "https://docs.rs/cinputs/latest/cinputs/"
keywords = ["parsing", "user-input", "input", "cinput"]
repository = "https://github.com/Larmbs/constrained-inputs"

[dependencies]
lazy_static = "1.4.0"
